kube/alrest/pvfm/aura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aura
  annotations:
    operator.1password.io/auto-restart: "true"
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
  labels:
    app.kubernetes.io/name: aura
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: aura
  replicas: 1
  template:      
    metadata:
      labels:
        app.kubernetes.io/name: aura
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: recordings
          persistentVolumeClaim:
            claimName: aura-recordings
        - name: temp
          emptyDir: {}
      containers:
        - name: bot
          image: ghcr.io/xe/x/aura:latest
          imagePullPolicy: "Always"
          workingDir: "/data"
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: "/data"
              name: recordings
            - mountPath: "/tmp"
              name: temp
