kube/alrest/pvfm/aura/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aura
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: aura
