kube/alrest/pvfm/aura/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aura
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - pvfm.within.lgbt
      secretName: pvfm-within-lgbt-public-tls
  rules:
  - host: pvfm.within.lgbt
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aura
            port: 
              name: http
